--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,2 @@
 vaccines_effectiveness_synthetic_dataset/vaccines_effectiveness_synthetic_dataset_pop_650k_v.1.0.1.csv filter=lfs diff=lfs merge=lfs -text
+vaccines_effectiveness_synthetic_dataset/vaccines_effectiveness_synthetic_dataset_eda_v.1.0.1.json filter=lfs diff=lfs merge=lfs -text
