Dockerfile now with CMD

--- a/vaccine_effectiveness_analytical_pipeline/Dockerfile
+++ b/vaccine_effectiveness_analytical_pipeline/Dockerfile
@@ -1,6 +1,7 @@
-#FROM r-base:4.2.3
 FROM registry.gitlab.com/quarto-forge/docker/rstats
+LABEL org.opencontainers.image.source https://github.com/by-covid/baseline-use-case-synthetic-crate
 USER root
+RUN mkdir /pipeline && chmod 777 /pipeline && chown $MAMBA_USER /pipeline
 USER $MAMBA_USER
 ADD environment.yml /tmp
 # Install conda requirements using micromamba, but avoid
@@ -14,3 +15,16 @@ ADD install.R /tmp
 RUN source _activate_current_env.sh ; \
   conda env update -f /tmp/environment.yml ; \
   Rscript /tmp/install.R
+
+RUN mkdir -p /pipeline/output /pipeline/input
+ADD scripts /pipeline/scripts/
+ADD input/vaccine_effectiveness_synthetic_pop_10k_v.1.1.0.csv /pipeline/input/
+USER root 
+RUN chown -R $MAMBA_USER /pipeline
+
+VOLUME /pipeline/input
+VOLUME /pipeline/output
+
+USER $MAMBA_USER
+WORKDIR /pipeline/scripts
+CMD ["quarto", "render", "analytical-pipeline.QMD", "--execute"]
