--- a/vaccine_effectiveness_analytical_pipeline/Dockerfile
+++ b/vaccine_effectiveness_analytical_pipeline/Dockerfile
@@ -1,8 +1,15 @@
 FROM mambaorg/micromamba:1.4.2-bullseye-slim
 
 USER root
-RUN apt update && apt install -y --no-install-recommends xdg-mime libgtk-3-0 libcurl4 libnss3 libv8-dev libwebkit2gtk-4.0-dev \
-  && rm -rf /var/lib/apt/lists/*
+
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    xdg-utils \
+    libgtk-3-0 \
+    libcurl4 \
+    libnss3 \
+    libv8-dev \
+    libwebkit2gtk-4.0-dev \
+    && rm -rf /var/lib/apt/lists/*
 
 USER $MAMBA_USER
 COPY --chown=$MAMBA_USER:$MAMBA_USER environment.yml /tmp
